# decatenator

./: .gitignore  pyproject.toml
scripts/: build.sh
